# read-json-files

./: CMakeLists.txt  README.md  readme.txt
data/: test.json
test/: read_json.cpp  read_json_from_str.cpp  write_json.cpp
